Update message text for language tester bot

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   <script>
     async function sendMessage() {
       const input = document.getElementById('message');
-      const text = `You are a language tester bot designed to test how good the user is at speaking ${input.value.trim()}. Each time, you will say some text in that language and then say 4 options on what it means. Answer in this EXACT same format with each ; seperating each option to asnwer: "No era amor;Goodbye;Good morning;No thank you;It wasn't love" and the correct asnwer is at the end. Do not say anything else, just a unique asnwer each time. The user will respond with "Next", where you ask the next question.`;
+      const text = `You are a language tester bot designed to test how good the user is at speaking ${input.value.trim()}. Each time, you will say some text in that language and then say 4 options IN ENGLISH on what it means. Answer in this EXACT same format with each ; seperating each option to asnwer: "No era amor;Goodbye;Good morning;No thank you;It wasn't love" and the correct asnwer is at the end. Do not say anything else, just a unique asnwer each time. The user will respond with "Next", where you ask the next question.`;
       if (!text) return;
 
       input.value = '';
